--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
-    <title>Vite App</title>
+    <title>p2p games</title>
   </head>
   <body>
     <div id="root"></div>
